--- a/tvbox/apple.json
+++ b/tvbox/apple.json
@@ -407,7 +407,7 @@
 			"searchable": 1,
 			"quickSearch": 0,
 			"filterable": 0,
-			"ext": "http://45.125.46.61/box/json/Alist.json"
+			"ext": "http://blog.kentxyli.tk/tvbox/Alist.json"
 		},
 		{
 			"key": "csp_xpath_kuqimv",
