--- a/.github/workflows/hexo_deploy.yml
+++ b/.github/workflows/hexo_deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: hexo_deploy
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 env:
   GIT_USER: Li Xiangyang
   GIT_EMAIL: lixiangyang1994@gmailcom
-  THEME_REPO: sanonz/hexo-theme-concise
+  THEME_REPO: litten/hexo-theme-yilia
   THEME_BRANCH: master
   DEPLOY_REPO: yung5133/yung5133.github.io
   DEPLOY_BRANCH: master
@@ -31,7 +31,7 @@ jobs:
         with:
           repository: ${{ env.THEME_REPO }}
           ref: ${{ env.THEME_BRANCH }}
-          path: themes/concise
+          path: themes/yilia
 
       - name: Checkout deploy repo
         uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config --global user.name $GIT_USER
           git config --global user.email $GIT_EMAIL
-          cp _config.theme.yml themes/concise/_config.yml
+          cp themes/yilia/_config.yml _config.yml
 
       - name: Install dependencies
         run: |
